<resources>
    <string name="app_name">ENCARGALO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_mitienda">MI TIENDA</string>
    <string name="menu_misproductos">MIS PRODUCTOS</string>
    <string name="menu_misordenes">MIS ORDENES</string>
    <string name="menu_mipublicidad">MI PUBLICIDAD</string>
    <string name="menu_miaprendizaje">MI APRENDIZAJE</string>
    <string name="menu_soporte">SOPORTE</string>
    <string name="str_terminos_politicas">Al continuar, usted acepta los Términos y condiciones y Política de Privacidad</string>
    <string name="str_btn_continuar">Continuar</string>
    <string name="str_btn_cancelar">Cancelar</string>
    <string name="str_home">Eso fue rápido!</string>
    <string name="str_btn_volver_inicio">Volver a inicio</string>
    <string name="str_btn_volver">Volver</string>
    <string name="is_varstriniciariesionprincipal1">ENVIA TUS PRODUCTOS A MÁS PERSONAS</string>
    <string name="is_varstriniciariesionprincipal2">Continuar con Facebook</string>
    <string name="is_varstriniciariesionprincipal3">Continuar con Google</string>
    <string name="is_varstrcrearunacuenta1">Nombre</string>
    <string name="is_varstrcrearunacuenta2">Apellido</string>
    <string name="is_varstrcrearunacuenta3">Correo</string>
    <string name="is_varstrcrearunacuenta4">Tipo de Persona</string>
    <string name="is_varstrcrearunacuenta5">52</string>
    <string name="is_varstrcrearunacuenta6">Acepto los términos y condiciones y políticas de Privacidad</string>
    <string name="is_varstrcrearunacuenta7">Registrarse</string>
    <string-array name="is_varstrcrearunacuenta8">
        <item>Persona natural</item>
        <item>Persona jurídica</item>
    </string-array>
    <string name="is_varstrverificacioncodigo1">Ingrese el código de verificación</string>
    <string name="is_varstrverificacioncodigo2">Se le ha enviado un código de verificación a tu cuenta de correo</string>
    <string name="is_varstrverificacioncodigo3">Ingrese código</string>
    <string name="is_varstrverificacioncodigo4">Reenviar Código</string>
    <string name="is_varstrverificacioncodigo5">Ingrese código</string>
    <string name="ap_varstrmenuaprendizaje0">Materiales de aprendizaje</string>
    <string name="ap_varstrmenuaprendizaje1">Busca recursos de aprendizaje y vuelvete un especialista en negocios</string>
    <string name="ap_varstrmenuaprendizaje2">Categorías</string>
    <string name="ap_varstrmenuaprendizaje3">Eventos en vivo</string>
    <string name="ap_varstrcategoriaaprendizaje0">Mi Aprendizaje</string>
    <string name="ap_varstrcategoriaaprendizaje1">Buscar</string>
    <string name="ap_varstrcategoriaaprendizaje2">Favoritos</string>
    <string name="ap_varstrcategoriaaprendizaje3">Ver más</string>
    <string name="ap_varstrcategoriaaprendizaje4">Aprendizaje relacionado a vender</string>
    <string name="ap_varstrcategoriaaprendizaje5">Aprendizaje relacionado a autoaprendizaje</string>
    <string name="ap_varstrcategoriaaprendizaje6">Aprendizaje relacionado a las operaciones del negocio</string>
    <string name="ap_varsmisfavoritos0">Mis favoritos</string>
    <string name="ap_varstreventosenvivo0">Eventos en vivo</string>
    <string name="ap_varstreventosenvivo1">Recurso web</string>
    <string name="ap_varstreventosenvivo2">Charla: </string>
    <string name="ap_varstreventosenvivo3">Fecha, hora: </string>
    <string name="ap_varstrcursoscategoria0">Cursos</string>
    <string name="pub_varstrmenupublicidad0">Publicidad</string>
    <string name="pub_varstrmenupublicidad1">Crea un anuncio y llega  más personas</string>
    <string name="pub_varstrmenupublicidad2">Crear anuncio</string>
    <string name="pub_varstrmenupublicidad3">Mis anuncios</string>
    <string name="pub_varstrcrearanuncio0">Crear anuncio</string>
    <string name="pub_varstrcrearanuncio1">Imagen</string>
    <string name="pub_varstrcrearanuncio2">Seleccionar imagen</string>
    <string name="pub_varstrcrearanuncio3">Título del anuncio</string>
    <string name="pub_varstrcrearanuncio4">Texto del anuncio</string>
    <string name="pub_varstrcrearanuncio5">Link de redireccionamiento</string>
    <string name="pub_varstrcrearanuncio6">Programar fecha de lanzamiento:</string>
    <string name="pub_varstrcrearanuncio7">Fecha de inicio</string>
    <string name="pub_varstrcrearanuncio8">Fecha de fin</string>
    <string name="pub_varstrpagaranuncio1">Resumen y pago</string>
    <string name="pub_varstrpagaranuncio2">Resumen:</string>
    <string name="pub_varstrpagaranuncio3">Fecha:</string>
    <string name="pub_varstrpagaranuncio4">Cargo por día</string>
    <string name="pub_varstrpagaranuncio5">Días</string>
    <string name="pub_varstrpagaranuncio6">Total a pagar</string>
    <string name="pub_varstrpagaranuncio7">Desde</string>
    <string name="pub_varstrpagaranuncio8">Hasta</string>
    <string name="pub_varstrpagaranuncio9">Seleccione medio de pago:</string>
    <string name="pub_varstrpagaranuncio10">Efectivo</string>
    <string name="pub_varstrpagaranuncio11">Pagar</string>
    <string name="pub_varstrlistadomisanuncios0">Mis anuncios</string>
    <string name="pub_varstrlistadomisanuncios1">Título: </string>
    <string name="pub_varstrlistadomisanuncios2">Publicado el: </string>
    <string name="pub_varstrlistadomisanuncios3">Días de duración: </string>
    <string name="pub_varstrlistadomisanuncios4">Nro. vistas: </string>
    <string name="pub_varstrlistadomisanuncios5">Tasa de conversión: </string>
    <string name="pub_varstrdetalleanuncio1">Descripción:</string>
    <string name="pub_varstrdetalleanuncio2">Fecha de publicación:</string>
    <string name="pub_varstrdetalleanuncio3">Monto pagado:</string>
    <string name="pub_varstrdetalleanuncio4">Volver a Lista</string>
    <string name="pub_varstranunciopagado1">Se ha generado el código:</string>
    <string name="pub_varstranunciopagado2">Lo puedes pagar en cualquier agente</string>
    <string name="pub_varstrcodigopago1">Volver:</string>
    <string name="pub_varstrmodalpagaranuncio1">¿Seguro que desea publicar anuncio?</string>
    <string name="pub_varstrmodalpagaranuncio2">Aceptar</string>
    <string name="pub_varstrmodalpagaranuncio3">Cancelar</string>
    <string name="pub_varstrmodalcancelaranuncio1">¿Seguro que desea cancelar anuncio?</string>
    <string name="pub_varstrmodalcancelaranuncio2">Aceptar</string>
    <string name="pub_varstrmodalcancelaranuncio3">Cancelar</string>
    <string name="mio_varstrmisordenesprincipal1">Buscar id de orden</string>
    <string name="mio_varstrmisordenesprincipal2">Filtrar por estado</string>
    <string name="mio_varstrmisordenesprincipal9">Filtrar por fecha</string>
    <string name="mio_varstrmisordenesprincipal3">ID ORDEN:</string>
    <string name="mio_varstrmisordenesprincipal4">Nombre completo del cliente:</string>
    <string name="mio_varstrmisordenesprincipal5">Órden creada el:</string>
    <string name="mio_varstrmisordenesprincipal6">Órden entregada el:</string>
    <string name="mio_varstrmisordenesprincipal7">Detalle</string>
    <string name="mio_varstrmisordenesprincipal8">Chat</string>
    <string-array name="Filtro_ordenestado">
        <item> Mas antiguo</item>
        <item> Mas Reciente</item>
        <item> Creado</item>
        <item> Preparado</item>
        <item> En reparto</item>
        <item> Entregado</item>
    </string-array>
    <string-array name="Filtro_ordenfecha">
        <item> Fecha inicio</item>
        <item>Fecha fin</item>
    </string-array>
    <string name="mio_varstrdetallepedido1">Nombre completo del cliente</string>
    <string name="mio_varstrdetallepedido2">Detalle</string>
    <string name="mio_varstrdetallepedido3">Chat</string>
    <string name="mio_varstrdetallepedido4">Estado de pedido</string>
    <string name="mio_varstrdetallepedido5">Solicitada</string>
    <string name="mio_varstrdetallepedido6">Acepta/Rechazado</string>
    <string name="mio_varstrdetallepedido7">En Preparación</string>
    <string name="mio_varstrdetallepedido8">En Camino</string>
    <string name="mio_varstrdetallepedido9">Entregado</string>
    <string name="mio_varstrdetallepedido10">Reclamado</string>
    <string name="mio_varstrdetallepedido11">Dirección de entrega</string>
    <string name="mio_varstrdetallepedido12">dirección</string>
    <string name="mio_varstrdetallepedido13">Productos</string>
    <string-array name="repartidores">
        <item>Paolo</item>
        <item>Adrián</item>
    </string-array>
    <string name="mio_varstrdetalleproducto1">Detalle pedidos N:</string>
    <string name="mio_varstrdetalleproducto2">Productos:</string>
    <string name="mio_varstrdetalleproducto3">Agua mineral San Carlos con gas 500ml</string>
    <string name="mio_varstrdetalleproducto4">s/1.5 x un</string>
    <string name="mio_varstrdetalleproducto5">1 un s/1.5</string>
    <string name="mio_varstrdetalleproducto6">Cancelar Orden</string>
    <string name="mio_varstrdetalleproducto7">Enviar</string>
    <string name="mio_varstrdetalleproducto8">Agua mineral San Carlos sin gas 500ml</string>
    <string name="mio_varstrchatcliente1">Nombre completo del cliente</string>
    <string name="mio_varstrchatcliente2">Detalle</string>
    <string name="mio_varstrchatcliente3">Chat</string>
    <string name="mio_varstrchatcliente4">Nombre del cliente</string>
    <string name="menu_soporte_acerca_de">Acerca de</string>
    <string name="menu_soporte_acerca_de_btn_1">Website</string>
    <string name="menu_soporte_acerca_de_btn_2">Facebook</string>
    <string name="menu_soporte_acerca_de_btn_3">Instagram</string>
    <string name="str_txt_simboloprecio">S/</string>
    <string name="rt_varstrcrearpuntoventa1">Datos de tu tienda</string>
    <string name="rt_varstrcrearpuntoventa2">Nombre de tu marca</string>
    <string name="rt_varstrcrearpuntoventa3">¿Cuánto vende al mes?</string>
    <string name="rt_varstrcrearpuntoventa4">Correo</string>
    <string name="rt_varstrcrearpuntoventa5">Nro. Celular</string>
    <string name="rt_varstrcrearpuntoventa6">Inventario estimado</string>
    <string name="rt_varstrcrearpuntoventa7">añadir ubicación</string>
    <string name="rt_varstrcrearpuntoventa8">Cambiar ubicación</string>
    <string name="rt_varstrcrearpuntoventa9">Ubicación seleccionada:</string>
    <string name="rt_varstrpuntodeventacreado">Tu punto de venta ha \nsido creado \nexitosamente</string>
    <string name="rt_varstrproductoagregado">Tu producto se \nañadió exitosamente</string>
    <string name="mit_varstrmenutienda1">  Proveedor</string>
    <string name="mit_varstrmenutienda2">  Ingreso Stock</string>
    <string name="mit_varstrmenutienda3">  Editar datos</string>
    <string name="mit_varstrmenutienda4">  Cambiar Tienda</string>
    <string name="mit_varstrmenutienda5">  Agregar Tienda</string>
    <string name="mit_varstrregistrarproducto1">Buscar Producto</string>
    <string name="mit_varstrregistrarproducto2">Nombre del producto</string>
    <string name="mit_varstrregistrarproducto3">Máximo de 3 fotos; Recuerda que la imagen debe pesar menos de 5MB</string>
    <string name="mit_varstrregistrarproducto5">Información general</string>
    <string name="mit_varstrregistrarproducto6">Descripción</string>
    <string name="mit_varstrregistrarproducto7">Categoria</string>
    <string name="mit_varstrregistrarproducto8">*Costo de producto</string>
    <string name="mit_varstrregistrarproducto9">*Precio de venta</string>
    <string name="mit_varstrregistrarproducto10">Agregar producto</string>
</resources>