<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tendero.Inicio_sesion.activity_is_actverificacioncodigo"
    android:layout_margin="@dimen/activity_margin"
    android:gravity="center_horizontal"
    android:padding="50dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_varstrverificacioncodigo1"
        android:layout_marginTop="36dp"
        android:textColor="@color/blackPrimary"
        android:textAllCaps="false"
        android:textSize="18dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_varstrverificacioncodigo2"
        android:layout_marginTop="36dp"
        android:textColor="@color/blackPrimary"
        android:textAllCaps="false"/>
    <EditText
        android:id="@+id/is_vcedtcodigoverificacion"
        android:layout_marginTop="36dp"
        android:layout_width="350dp"
        android:layout_height="42dp"
        android:gravity="center_horizontal"
        android:hint="@string/is_varstrverificacioncodigo3"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="40dp"
        android:gravity="center"
        android:layout_marginTop="230dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/is_vcbtnreenviarcodigo"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/containedbutton_cyan"
            android:text="@string/is_varstrverificacioncodigo4"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/is_vcbtncontinuar"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/containedbutton_cyan"
            android:text="@string/is_varstrverificacioncodigo5"

            android:textAllCaps="false"
          />
    </LinearLayout>
</LinearLayout>
</ScrollView>