<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.Mi_tienda.mit_frgproductoagregado"
    android:background="@color/cyan_400"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/txt_encabezado"
        android:textColor="@color/txtEncabezado"
        android:text="@string/rt_varstrproductoagregado"
        />

    <TextView
        android:id="@+id/txt_tnhometxt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/str_home"
        android:textColor="@color/txtEncabezado"/>

    <Button
        android:id="@+id/btn_tnhomevlvr"
        style="@style/btnvolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_volver"/>

    </LinearLayout>

</ScrollView>