<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cyan_400"
    tools:context=".UI.Mi_tienda.rt_frgpuntoventacreado">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="124dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rt_varstrpuntodeventacreado"
            android:textSize="@dimen/txt_encabezado"
            android:textColor="@color/txtEncabezado"
        />

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_home"
            android:textColor="@color/txtEncabezado"
         />

        <Button
            android:id="@+id/btn_pvcbtnvolverinicio"
            style="@style/btnvolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_volver_inicio" />

    </LinearLayout>
</ScrollView>